--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-./drophyper
-./Data
-./Main_bis.ipynb
-./Main.ipynb
-./models.py
-./models_bis.ipynb
-./Test.ipynb
+drophyper/
+Data/
+Main_bis.ipynb
+Main.ipynb
+models.py
+models_bis.ipynb
+Test.ipynb
